--- a/account/class/index.html
+++ b/account/class/index.html
@@ -11,12 +11,12 @@
   <meta property=og:title content=GoLearn>
   <meta property=og:site_name content=GoLearn>
   <meta property=og:type content=website>
-  <meta property=og:url content=https://app.golearn.com.my/school/class/>
-  <meta property=og:image content=https://app.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
+  <meta property=og:url content=https://org.golearn.com.my/school/class/>
+  <meta property=og:image content=https://org.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
   <meta property=og:description content="GoLearn School&trade; is Malaysia #1 teaching platform to run your tuition business and manage your lessons. Start now for Free!">
-  <link rel=apple-touch-icon sizes=180x180 href=https://app.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
-  <link rel=icon type=image/png sizes=32x32 href=https://app.golearn.com.my/assets/img/icon-32x32.png>
-  <link rel=icon type=image/png sizes=16x16 href=https://app.golearn.com.my/assets/img/icon-16x16.png>
+  <link rel=apple-touch-icon sizes=180x180 href=https://org.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
+  <link rel=icon type=image/png sizes=32x32 href=https://org.golearn.com.my/assets/img/icon-32x32.png>
+  <link rel=icon type=image/png sizes=16x16 href=https://org.golearn.com.my/assets/img/icon-16x16.png>
   <!-- Fonts and icons -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <script src="https://kit.fontawesome.com/2bdd669e92.js" crossorigin="anonymous"></script>
@@ -943,7 +943,7 @@
       let img = document.createElement("img");
       img.setAttribute("style", "height: 100%;width: 100%; object-fit: cover;");
       if (doc.data()[CLASS_IMG_URL] == null || doc.data()[CLASS_IMG_URL] == "")
-        img.src = "https://app.golearn.com.my/assets/img/empty-photo.png";
+        img.src = "https://org.golearn.com.my/assets/img/empty-photo.png";
       else
         img.src = doc.data()[CLASS_IMG_URL];
 
@@ -1076,7 +1076,7 @@
           // UrlGroupFaviconUrl = "http://www.google.com/s2/favicons?domain="+doc.data()[item];
         }else{
           UrlGroupUrl = 'javascript:;';
-          UrlGroupFaviconUrl = "https://app.golearn.com.my/assets/img/broken-link.png";
+          UrlGroupFaviconUrl = "https://org.golearn.com.my/assets/img/broken-link.png";
         }
 
         let urlGroupHtml = '';
