--- a/account/invoice/checker.html
+++ b/account/invoice/checker.html
@@ -11,12 +11,12 @@
   <meta property=og:title content="GoLearn School">
   <meta property=og:site_name content="GoLearn School">
   <meta property=og:type content=website>
-  <meta property=og:url content=https://app.golearn.com.my/school/invoice/ >
-  <meta property=og:image content=https://app.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
+  <meta property=og:url content=https://org.golearn.com.my/school/invoice/ >
+  <meta property=og:image content=https://org.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
   <meta property=og:description content="GoLearn School&trade; is Malaysia #1 teaching platform to run your tuition business and manage your lessons. Start now for Free!">
-  <link rel=apple-touch-icon sizes=180x180 href=https://app.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
-  <link rel=icon type=image/png sizes=32x32 href=https://app.golearn.com.my/assets/img/icon-32x32.png>
-  <link rel=icon type=image/png sizes=16x16 href=https://app.golearn.com.my/assets/img/icon-16x16.png>
+  <link rel=apple-touch-icon sizes=180x180 href=https://org.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
+  <link rel=icon type=image/png sizes=32x32 href=https://org.golearn.com.my/assets/img/icon-32x32.png>
+  <link rel=icon type=image/png sizes=16x16 href=https://org.golearn.com.my/assets/img/icon-16x16.png>
   <!-- Fonts and icons -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" rel="stylesheet" type="text/css" />
   <script src="https://kit.fontawesome.com/2bdd669e92.js" crossorigin="anonymous"></script>
@@ -904,8 +904,8 @@
 
         cell1.innerHTML = invRNameArr[index];
         cell2.innerHTML = rid;
-        // https://app.golearn.com.my/c/f/view.html?iid=McxIlEuCz0yCmV92vaTT
-        let invUrl = 'https://app.golearn.com.my/c/f/view.html?iid=' + invIdArr[index]
+        // https://org.golearn.com.my/c/f/view.html?iid=McxIlEuCz0yCmV92vaTT
+        let invUrl = 'https://org.golearn.com.my/c/f/view.html?iid=' + invIdArr[index]
         let invUrl_a = document.createElement('a');
         invUrl_a.href = invUrl;
         invUrl_a.textContent = invRefNoArr[index];
@@ -945,8 +945,8 @@
 
         cell1.innerHTML = invRNameArr[index];
         cell2.innerHTML = invRIdArr[index];
-        // https://app.golearn.com.my/c/f/view.html?iid=McxIlEuCz0yCmV92vaTT
-        let invUrl = 'https://app.golearn.com.my/c/f/view.html?iid=' + invIdArr[index]
+        // https://org.golearn.com.my/c/f/view.html?iid=McxIlEuCz0yCmV92vaTT
+        let invUrl = 'https://org.golearn.com.my/c/f/view.html?iid=' + invIdArr[index]
         let invUrl_a = document.createElement('a');
         invUrl_a.href = invUrl;
         invUrl_a.textContent = invRefNoArr[index];
@@ -989,7 +989,7 @@
         cell1.innerHTML = gurNameArr[index];
         cell2.innerHTML = rid;
         let invUrl_a = document.createElement('a');
-        invUrl_a.href = 'https://app.golearn.com.my/school/invoice/create-invoice.html';
+        invUrl_a.href = 'https://org.golearn.com.my/school/invoice/create-invoice.html';
         invUrl_a.textContent = 'Create New';
         invUrl_a.setAttribute('class', 'btn btn-primary btn-sm btn-round');
         invUrl_a.setAttribute('target', '_blank');
@@ -1023,7 +1023,7 @@
         cell2.innerHTML = rid;
         let invUrl_a = document.createElement('a');
         let encodeId = encode64(rid);
-        invUrl_a.href = 'https://app.golearn.com.my/school/invoice/create-invoice.html?cid=' +encodeId ;
+        invUrl_a.href = 'https://org.golearn.com.my/school/invoice/create-invoice.html?cid=' +encodeId ;
         invUrl_a.textContent = 'Create New';
         invUrl_a.setAttribute('class', 'btn btn-primary btn-sm btn-round');
         invUrl_a.setAttribute('target', '_blank');
@@ -1057,8 +1057,8 @@
 
         cell1.innerHTML = invRNameArr[index];
         cell2.innerHTML = rid;
-        // https://app.golearn.com.my/c/f/view.html?iid=McxIlEuCz0yCmV92vaTT
-        let invUrl = 'https://app.golearn.com.my/c/f/view.html?iid=' + invIdArr[index]
+        // https://org.golearn.com.my/c/f/view.html?iid=McxIlEuCz0yCmV92vaTT
+        let invUrl = 'https://org.golearn.com.my/c/f/view.html?iid=' + invIdArr[index]
         let invUrl_a = document.createElement('a');
         invUrl_a.href = invUrl;
         invUrl_a.textContent = invRefNoArr[index];
@@ -1098,8 +1098,8 @@
 
         cell1.innerHTML = invRNameArr[index];
         cell2.innerHTML = invRIdArr[index];
-        // https://app.golearn.com.my/c/f/view.html?iid=McxIlEuCz0yCmV92vaTT
-        let invUrl = 'https://app.golearn.com.my/c/f/view.html?iid=' + invIdArr[index]
+        // https://org.golearn.com.my/c/f/view.html?iid=McxIlEuCz0yCmV92vaTT
+        let invUrl = 'https://org.golearn.com.my/c/f/view.html?iid=' + invIdArr[index]
         let invUrl_a = document.createElement('a');
         invUrl_a.href = invUrl;
         invUrl_a.textContent = invRefNoArr[index];
