--- a/account/payroll/history.html
+++ b/account/payroll/history.html
@@ -11,12 +11,12 @@
   <meta property=og:title content="GoLearn School">
   <meta property=og:site_name content="GoLearn School">
   <meta property=og:type content=website>
-  <meta property=og:url content=https://app.golearn.com.my/school/payroll/history.html >
-  <meta property=og:image content=https://app.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
+  <meta property=og:url content=https://org.golearn.com.my/school/payroll/history.html >
+  <meta property=og:image content=https://org.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
   <meta property=og:description content="GoLearn School&trade; is Malaysia #1 teaching platform to run your tuition business and manage your lessons. Start now for Free!">
-  <link rel=apple-touch-icon sizes=180x180 href=https://app.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
-  <link rel=icon type=image/png sizes=32x32 href=https://app.golearn.com.my/assets/img/icon-32x32.png>
-  <link rel=icon type=image/png sizes=16x16 href=https://app.golearn.com.my/assets/img/icon-16x16.png>
+  <link rel=apple-touch-icon sizes=180x180 href=https://org.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
+  <link rel=icon type=image/png sizes=32x32 href=https://org.golearn.com.my/assets/img/icon-32x32.png>
+  <link rel=icon type=image/png sizes=16x16 href=https://org.golearn.com.my/assets/img/icon-16x16.png>
   <!-- Fonts and icons -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" rel="stylesheet" type="text/css" />
   <script src="https://kit.fontawesome.com/2bdd669e92.js" crossorigin="anonymous"></script>
