--- a/account/invoice/view.html
+++ b/account/invoice/view.html
@@ -11,12 +11,12 @@
   <meta property=og:title content="GoLearn School">
   <meta property=og:site_name content="GoLearn School">
   <meta property=og:type content=website>
-  <meta property=og:url content=https://app.golearn.com.my/school/invoice/view.html>
-  <meta property=og:image content=https://app.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
+  <meta property=og:url content=https://org.golearn.com.my/school/invoice/view.html>
+  <meta property=og:image content=https://org.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
   <meta property=og:description content="GoLearn School&trade; is Malaysia #1 teaching platform to run your tuition business and manage your lessons. Start now for Free!">
-  <link rel=apple-touch-icon sizes=180x180 href=https://app.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
-  <link rel=icon type=image/png sizes=32x32 href=https://app.golearn.com.my/assets/img/icon-32x32.png>
-  <link rel=icon type=image/png sizes=16x16 href=https://app.golearn.com.my/assets/img/icon-16x16.png>
+  <link rel=apple-touch-icon sizes=180x180 href=https://org.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
+  <link rel=icon type=image/png sizes=32x32 href=https://org.golearn.com.my/assets/img/icon-32x32.png>
+  <link rel=icon type=image/png sizes=16x16 href=https://org.golearn.com.my/assets/img/icon-16x16.png>
   <!-- Fonts and icons -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" rel="stylesheet" type="text/css" />
   <script src="https://kit.fontawesome.com/2bdd669e92.js" crossorigin="anonymous"></script>
@@ -1380,7 +1380,7 @@
       let line1 = "Hi "+ invObj[INV_RECEIVER_NAME]+ ", ";
       let line2 = "\nHere's the invoice for the tuition fee this month. Click on the link below to view. ";
       // let line5 = "\nYou are welcome to download a copy as your reference.";
-      let line3 = "\nhttps://app.golearn.com.my/c/f/view.html?iid="+invObj[INV_ID]+ " ";
+      let line3 = "\nhttps://org.golearn.com.my/c/f/view.html?iid="+invObj[INV_ID]+ " ";
       let line4 = "\nAmount: "+invAmount;
       let line5 = "\nDue Date: "+dueDate;
       let line6 = "\nThank you! ";
@@ -1389,7 +1389,7 @@
       document.getElementById("inPredefinedMessage").innerHTML = finalline ;
 
       // Download as PDF (The original download function do not work on mobile view. There will be a huge empty section on top)
-      btnDownloadAsPDF.setAttribute("href", "https://app.golearn.com.my/c/f/view.html?iid="+invObj[INV_ID]);
+      btnDownloadAsPDF.setAttribute("href", "https://org.golearn.com.my/c/f/view.html?iid="+invObj[INV_ID]);
       btnDownloadAsPDF.setAttribute("target", "blank");
     }
 
