--- a/account/team/edit.html
+++ b/account/team/edit.html
@@ -464,7 +464,7 @@
                                     </span>
                                   </span>
                                   <select class="custom-select" id="empRole">
-                                    <!-- <option value="owner" style="display: none;">Owner</option> -->
+                                    <option value="owner" style="display: none;">Owner</option>
                                     <option value="superAdmin" class="hidden" perm='team-superAdmin-add'>Super Admin</option>
                                     <option value="admin" class="hidden" perm='team-admin-add'>Admin</option>
                                     <option value="staff" class="hidden" perm='team-staff-add' selected>Staff</option>
