Added admin status

--- a/account/team/edit.html
+++ b/account/team/edit.html
@@ -1375,6 +1375,8 @@
         [ORG_EMP_EPF] : epf,
         [ORG_EMP_SOCSO] : socsoNo,
         [ORG_EMP_TAX_NO]  : taxNo,
+        // [ORG_EMP_ADMIN_STATUS] : ORG_ADMIN_STATUS_ACTIVE,
+
       }
 
       let roleData = {
@@ -1402,6 +1404,8 @@
         [ORG_ROLE_ORG_NAME]  : ent_name,
         [ORG_ROLE_ORG_IMG_URL] : ent_imgUrl,
         [ORG_ROLE_ORG_COVER_IMG_URL]  : ent_coverImgUrl,
+        // [ORG_ROLE_ADMIN_STATUS] : ORG_ADMIN_STATUS_ACTIVE,
+
       }
 
       var promiseAll = []
