--- a/404.html
+++ b/404.html
@@ -12,37 +12,11 @@
   <script src="https://kit.fontawesome.com/2bdd669e92.js" crossorigin="anonymous"></script>
   <!-- Material Kit CSS -->
   <link href="../assets/css/material-dashboard.css?v=2.1.2" rel="stylesheet" />
-
-  <!-- Firebase Init -->
-  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-database.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-storage.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-firestore.js"></script>
-  <!-- <script src="js/firebase.js"></script> -->
-  <script src="../assets/js/firebase.js"></script>
 </head>
 
 <body>
 
-  <div class="hidden" name="lockscreen" style="height:100vh; width:100vw;  background: white; position: absolute; z-index: 1050;">
-    <div class="container" style="background: transparent; height: 100vh; display: flex; vertical-align: middle; align-items: center; justify-content: center;">
-      <div class="row align-items-center">
-        <div class="col-md-6 text-center">
-          <h2>Cannot reach!</h2>
-          <p>This account is temporarily disabled. Please contact our <a href="https://golearn.com.my/contact-us">support</a> for more details. </p>
-          <a href="https://org.golearn.com.my" class="btn btn-outline-primary btn-round"><i class="material-icons" style="color: #2e74b6; margin-right: 0.5em; padding-bottom: 0.2em;">west</i> Back to Home</a>
-        </div>
-        <div class="col-md-6 mr-auto" style="height: 400px; width: fit-content;">
-          <a href="javascript:;" >
-            <img class="img" id="tutorImgUrl3" style="height: 100%; width:100%; object-fit: cover; pointer-events: none; " src="https://org.golearn.com.my/assets/img/maintenance.gif"/>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="wrapper">
-
     <div class="main-panel">
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
@@ -66,10 +40,7 @@
           <!-- your content here -->
           <div class="row">
             <div class="col-md-9">
-              <h2>GoLearn Tutor is down for maintenance. </h2>
-            </div>
-            <div class="col-md-9">
-              <h4>We've got something special for you, please check back soon. </h4>
+              <h2>Page Not Found! </h2>
             </div>
 
           </div>
@@ -119,59 +90,34 @@
                 </div>
               </div>
 
-              <div class="info info-horizontal" >
-                <div class="description">
-                  <h4 class="info-title" style="padding-top: 1rem; font-weight: 500;">Get the App</h4>
-                  <div class="row">
-                    <div class="col-md-6 ml-auto">
-                      <a href="https://play.google.com/store/apps/details?id=com.tacreativesolutions.golearntutor" target="_blank" class="simple-text logo-mini">
-                        <img src="../assets/img/logo-google-play.png" style="width: 180px; height: auto;" alt=""></img>
-                      </a>
-                    </div>
-                    <div class="col-md-6 ml-auto">
-                    </div>
-                  </div>
-
-                </div>
-              </div>
-
             </div>
 
-            <div class="col-md-7 mr-auto" style="height: 400px; width: fit-content;">
-              <!-- <div class="col-md-4" > -->
-                <a href="javascript:;" >
-                  <img class="img" id="tutorImgUrl3" style="height: 100%; width:100%; object-fit: cover; pointer-events: none; " src="https://org.golearn.com.my/assets/img/maintenance.gif"/>
-                </a>
-
-              <!-- </div> -->
-
+            <div class="col-md-7 mr-auto align-items-center">
+              <img class="img" id="tutorImgUrl3" style="height: 300px; width:auto; object-fit: cover; " src="https://org.golearn.com.my/assets/img/maintenance.gif"/>
             </div>
 
           </div>
 		  </div>
       </div>
 
-	  <footer class="footer">
-		<div class="container-fluid">
-			<nav class="float-left">
-			<ul>
-				<li>
-          <a href="https://golearn.com.my/join-us">
-            Visit GoLearn Tutor
-          </a>
-				</li>
-			</ul>
-			</nav>
-			<!-- <div class="copyright float-right">
-			&copy;
-			<script>
-				document.write(new Date().getFullYear())
-			</script>, made with <i class="material-icons">favorite</i> by
-			<a href="#" >Boring Alric</a>
-			</div> -->
-			<!-- your footer here -->
-		</div>
-	  </footer>
+      <footer class="footer">
+        <div class="container">
+          <div class=" row">
+            <div class="col-10">
+              <div class="text-center">
+
+                <p class="text-dark my-4 text-sm font-weight-normal">
+                  <a href="https://golearn.com.my" target="_blank">GoLearn</a><br/>
+                  All rights reserved. Copyright ©
+                  <script>
+                  document.write(new Date().getFullYear())
+                  </script> </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+
     </div>
 
   </div>
@@ -187,38 +133,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
 
-  <!-- International Telephone Input -->
-  <script src="../assets/js/plugins/intlTelInput/intlTelInput.js"></script>
-  <!-- Login specific -->
-  <script src="js/tutor-portal-auth.js" type="text/javascript"></script>
-  <!-- Common constants -->
-  <script src="../assets/js/common.js" type="text/javascript"></script>
-  <!-- Core Tutor Js -->
-  <script src="../assets/js/tutor-core.js" type="text/javascript"></script>
 
-  <!-- Define db -->
-  <script>
-    var db = firebase.firestore();
-    db.settings({ timestampsInSnapshots: true });
-  </script>
-  <script>
-    // Auto Login
-    firebase.auth().onAuthStateChanged(function(user){
-      if(user){
-      }else{
-      }
-    })
-  </script>
-
-
-  <script>
-
-    $( document ).ready(function() {
-
-    });
-
-
-  </script>
 </body>
 
 </html>
