--- a/profile/index.html
+++ b/profile/index.html
@@ -257,7 +257,7 @@
   <!-- Navbar Transparent -->
   <nav class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-none my-3  navbar-transparent ">
     <div class="container">
-      <a class="navbar-brand  text-white " href="https://org.golearn.com.my" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" target="_blank">
+      <a class="navbar-brand  text-white " href="https://org.golearn.com.my" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" >
         <!-- Material Kit 2 -->
         <img src="../assets/img/golearn-plain-white.svg" style="width: 180px; height: auto; opacity: 0.8;" alt=""></img>
 
