--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <!-- Navbar Transparent -->
   <nav class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-none my-3  navbar-transparent ">
     <div class="container">
-      <a class="navbar-brand  text-white " href="https://org.golearn.com.my" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" target="_blank">
+      <a class="navbar-brand  text-white " href="https://org.golearn.com.my" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" >
         <!-- Material Kit 2 -->
         <img src="./assets/img/golearn-plain-white.svg" style="width: 150px; height: auto; opacity: 0.8;" alt=""></img>
 
@@ -122,45 +122,7 @@
               </div>
             </div>
           </li>
-          <!-- <li class="nav-item dropdown dropdown-hover mx-2">
-            <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" id="dropdownMenuBlocks" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="material-icons opacity-6 me-2 text-md">view_day</i>
-              Sections
-              <img src="./assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-auto ms-md-2">
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end dropdown-menu-animation dropdown-md dropdown-md-responsive p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuBlocks">
-              <div class="d-none d-lg-block">
-                <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                  <a class="dropdown-item py-2 ps-3 border-radius-md" href="./presentation.html">
-                    <div class="w-100 d-flex align-items-center justify-content-between">
-                      <div>
-                        <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Page Sections</h6>
-                        <span class="text-sm">See all sections</span>
-                      </div>
-                      <img src="./assets/img/down-arrow.svg" alt="down-arrow" class="arrow">
-                    </div>
-                  </a>
-                  <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="./sections/page-sections/hero-sections.html">
-                      Page Headers
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="./sections/page-sections/features.html">
-                      Features
-                    </a>
-                  </div>
-                </li>
-              </div>
-            </ul>
-          </li> -->
-          <!-- <li class="nav-item ms-lg-auto">
-            <a class="nav-link nav-link-icon me-2" href="https://github.com/creativetimofficial/soft-ui-design-system" target="_blank">
-              <i class="fa fa-github me-1"></i>
-              <p class="d-inline text-sm z-index-1 font-weight-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Star us on Github">Github</p>
-            </a>
-          </li>
-          <li class="nav-item my-auto ms-3 ms-lg-0">
-            <a href="https://www.creative-tim.com/product/material-kit-pro" class="btn btn-sm  bg-white  mb-0 me-1 mt-2 mt-md-0">Upgrade to Pro</a>
-          </li> -->
+
         </ul>
       </div>
     </div>
@@ -313,6 +275,13 @@
 
           <div class="col-md-9">
             <div class="row" id="allRole">
+              <div class="col-md-12 hidden" id="noRole">
+                <p class="m-0">Running a education businesss?</p>
+                <a href="https://golearn.com.my/pricing/">
+                  Get 2x more students with GoLearn Organization&trade; today!
+                </a>
+              </div>
+
               <div class="col-md-4 mt-md-3 mt-5 d-none">
                 <a href="./organization/?org=hsjjoiqwkajs">
                   <div class="card move-on-hover">
@@ -421,11 +390,6 @@
       // Load all roles
       loadAllRoles();
 
-      // Check user
-      // if (org_accountStatus === PREMIUM_ACCOUNT_2_STATUS_KEY || org_accountStatus === PREMIUM_ACCOUNT_2_ACTIVE_STATUS_KEY ||
-      // org_accountStatus === PREMIUM_ACCOUNT_3_STATUS_KEY || org_accountStatus === PREMIUM_ACCOUNT_3_ACTIVE_STATUS_KEY  ){
-      //   document.getElementById('btnAddAccount').classList.remove('hidden')
-      // }
     }
 
     function createNewAcc(){
@@ -689,14 +653,19 @@
         var allDataObj = [];
         let accountNum = 0;
 
+        if (snapshots.size < 1){
+
+          document.getElementById('noRole').classList.remove('hidden')
+        }
         snapshots.forEach((doc) => {
           console.log(doc.data())
 
-          renderRole(doc.data());
+
           let data = doc.data();
 
           // Limitations
           if (data[ORG_ROLE_TYPE] === ORG_TYPE_ACC){
+            renderRole(data);
             accountNum  = accountNum + 1;
           }
 
@@ -796,6 +765,7 @@
       top_div.className = 'col-md-4 mt-md-3 mt-5'
       top_div.appendChild(aWrap)
 
+      console.log(top_div)
 
       const allRole = document.getElementById("allRole");
       allRole.appendChild(top_div);
