--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           <div class="col-md-9">
             <div class="row" id="allRole">
               <div class="col-md-12 hidden" id="noRole">
-                <p class="m-0">Running a education businesss?</p>
+                <p class="m-0">Running an education business?</p>
                 <a href="https://golearn.com.my/pricing/">
                   Get 2x more students with GoLearn Organization&trade; today!
                 </a>
